--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,3 +20,10 @@ services:
     container_name: docker-ffmpeg
     volumes:
       - ../media:/media  # media storage, shared folder for communication
+
+  bento4:
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile_api
+    volumes:
+      - ../tmp:/opt/tmp
